Improve overwrite handling

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -263,6 +263,7 @@
     "        shutil.rmtree(case_dst)\n",
     "    else:\n",
     "        print(f'This case has already been processed and you have set overwrite to false in the config file. Change the case ID or delete the existing folder {case_dst} before proceeding.')"
+    "        sys.exit()"
    ]
   },
   {
@@ -928,7 +929,10 @@
     "# Save a copy of the config file to the output folder\n",
     "output_folder = Path(config[\"output_fitting\"][\"output_directory\"])\n",
     "output_folder.mkdir(parents=True, exist_ok=True)\n",
-    "shutil.copy(config_file, output_folder)"
+    "shutil.copy(config_file, output_folder)\n",
+    "\n",
+    "# Force overwrite to true\n",
+    "config[\"output_fitting\"][\"overwrite\"] = True"
    ]
   },
   {
