Fix syntax error

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -262,8 +262,8 @@
     "    if overwrite:\n",
     "        shutil.rmtree(case_dst)\n",
     "    else:\n",
-    "        print(f'This case has already been processed and you have set overwrite to false in the config file. Change the case ID or delete the existing folder {case_dst} before proceeding.')"
-    "        sys.exit()"
+    "        print(f'This case has already been processed and you have set overwrite to false in the config file. Change the case ID or delete the existing folder {case_dst} before proceeding.')\n",
+    "        sys.exit()\n"
    ]
   },
   {
