Update description of view selection in notebook

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -346,13 +346,18 @@
     "## Step 1: View selection\n",
     "View selection can be carried out in four main ways. \n",
     "\n",
-    "The first option is the 'default' option. This involves the use of two models - one using only dicom metadata and one using only image data. Each model performs prediction separately and then predictions are combined for a final verdict. This should be the most robust option, but takes longer to complete.\n",
+    "The first option is the **'default'** option. This involves the use of two models - one using only dicom metadata and one using only image data. Each model performs prediction separately and then predictions are combined for a final verdict. This should be the most robust option, but takes longer to complete. \n",
     "\n",
-    "The second option is the 'metadata-only' option. This only uses metadata. This model can struggle with subtle distinctions between similar views (e.g. between SAX and SAX-atria) but is excellent at distinguishing between general categories of view (e.g. SAX vs LAX).\n",
+    "The second option is the **'metadata-only'** option. This only uses metadata. This model can struggle with subtle distinctions between similar views (e.g. between SAX and SAX-atria) but is excellent at distinguishing between general categories of view (e.g. SAX vs LAX). \n",
     "\n",
-    "The third option is the 'image-only' option. This only uses image data. This model is better all round than the metadata-only model, but can occasionally produce spurious predictions. \n",
+    "The third option is the **'image-only'** option. This only uses image data. This model is better all round than the metadata-only model, but can occasionally produce spurious predictions. \n",
     "\n",
-    "The fourth option is the 'load' option. This loads view predictions from the states folder. This is useful if view predictions have already been made, avoiding the need to rerun prediction from scratch. It also allows for you to make and save manual corrections to the selected views. "
+    "The fourth option is the **'load'** option. This loads view predictions from the states folder. This is useful if view predictions have already been made, avoiding the need to rerun prediction from scratch. It also allows for you to make and save manual corrections to the selected views. \n",
+    "\n",
+    "On top of these options, you can also manually review and correct the selected views using a simple GUI. There are three options - **'manual'**, which always launches the GUI after view selection, **'adaptive'**, which only launches the GUI if there are low confidence predictions or missing views, or **'automatic'**, which does not launch the GUI and keeps the automatic predictions as they are.\n",
+    "\n",
+    "#### Important note about required views\n",
+    "To proceed with fitting, you must have at least SAX images and a 4ch image. This is because the fitting requires landmarks from the 4ch image to initialise the model (mitral valve, tricuspid valve, and apex point). Using the GUI on **'adaptive'** mode will make sure that you never miss a required view. "
    ]
   },
   {
