--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -357,7 +357,7 @@
     "On top of these options, you can also manually review and correct the selected views using a simple GUI. There are three options - **'manual'**, which always launches the GUI after view selection, **'adaptive'**, which only launches the GUI if there are low confidence predictions or missing views, or **'automatic'**, which does not launch the GUI and keeps the automatic predictions as they are.\n",
     "\n",
     "#### Important note about required views\n",
-    "To proceed with fitting, you must have at least SAX images and a 4ch image. This is because the fitting requires landmarks from the 4ch image to initialise the model (mitral valve, tricuspid valve, and apex point). Using the GUI on **'adaptive'** mode will make sure that you never miss a required view. "
+    "To proceed with fitting, you must have at least some SAX images and a 4ch image. This is because the fitting requires landmarks from the 4ch image to initialise the model (mitral valve, tricuspid valve, and apex point). The SAX images are required, along with at least one long axis image e.g. 4ch, to correct for breath-hold misalignment. Using the GUI on **'adaptive'** mode will make sure that you never miss a required view. "
    ]
   },
   {
