Clear processed directory if overwriting

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -271,10 +271,19 @@
     "if os.path.exists(case_output):\n",
     "    overwrite = config['output_pp']['overwrite']\n",
     "    if overwrite:\n",
+    "        shutil.rmtree(case_dst)\n",
     "        shutil.rmtree(case_output)\n",
     "    else:\n",
     "        print(f'This case has already been processed and you have set overwrite to false in the config file. Change the case ID or delete the existing folder {case_dst} before proceeding.')\n",
-    "        sys.exit()\n"
+    "        sys.exit()\n",
+    "\n",
+    "elif os.path.exists(case_dst):\n",
+    "    overwrite = config['output_pp']['overwrite']\n",
+    "    if overwrite:\n",
+    "        shutil.rmtree(case_dst)\n",
+    "    else:\n",
+    "        print(f'This case has already been processed and you have set overwrite to false in the config file. Change the case ID or delete the existing folder {case_dst} before proceeding.')\n",
+    "        sys.exit()"
    ]
   },
   {
