Add landmark smoothing

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -815,7 +815,7 @@
    ],
    "source": [
     "gp_dir = os.path.join(output, case)\n",
-    "export_guidepoints(case_dst, gp_dir, slice_dict, slice_mapping)\n",
+    "export_guidepoints(case_dst, gp_dir, slice_dict, slice_mapping, smooth_landmarks=True)\n",
     "logger.success(f'Guide points exported successfully.')\n",
     "logger.success(f'Case {case} complete.')\n",
     "logger.info(f'Total time taken: {time.time()-start_time} seconds.')"
