write slice info file after applying rescaling factor
Should solve occasional issue with plotting whereby images appear unaligned

--- a/src/bivme/main_interactive.ipynb
+++ b/src/bivme/main_interactive.ipynb
@@ -432,7 +432,7 @@
     "# 'adaptive' will only launch a GUI if there are any poor predictions or missing views\n",
     "# 'automatic' will not launch the GUI and will use the predictions as they are.\n",
     "\n",
-    "slice_info_df, num_phases, slice_mapping = select_views(case, case_src, case_dst, MODEL_DIR, states, option, correct_mode, logger)\n",
+    "slice_info_df, num_phases = select_views(case, case_src, case_dst, MODEL_DIR, states, option, correct_mode, logger)\n",
     "\n",
     "logger.success(f'View selection complete.')\n",
     "logger.info(f'Number of phases: {num_phases}')"
@@ -825,7 +825,7 @@
     "smooth_landmarks = True # Set to True to smooth the landmarks, False to keep them as they are\n",
     "gp_dir = os.path.join(output, case)\n",
     "\n",
-    "export_guidepoints(case_dst, gp_dir, slice_dict, slice_mapping, smooth_landmarks)\n",
+    "export_guidepoints(case_dst, gp_dir, slice_dict, smooth_landmarks)\n",
     "logger.success(f'Guide points exported successfully.')\n",
     "logger.success(f'Case {case} complete.')\n",
     "logger.info(f'Total time taken: {time.time()-start_time} seconds.')"
